--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,24 +1,27 @@
-h2
-  | Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :email
-    br
-    = f.email_field :email, autofocus: true
-  .field
-    = f.label :password
-    - if @validatable
-      em
-        | (
-        = @minimum_password_length
-        |  characters minimum)
-    br
-    = f.password_field :password, autocomplete: "off"
-  .field
-    = f.label :password_confirmation
-    br
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .actions
-    = f.submit "Sign up"
-= render "devise/shared/links"
+ .row
+     .col-md-4.col-md-offset-4
+         .well
+            h2
+              | Sign up
+            = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+             = devise_error_messages!
+             .field.form-group
+                = f.label :email
+                br
+                = f.email_field :email, autofocus: true, class: 'form-control'
+             .field.form-group
+                = f.label :password
+                - if @validatable
+                  em
+                    | (
+                    = @minimum_password_length
+                    |  characters minimum)
+                br
+                = f.password_field :password, autocomplete: "off", class: 'form-control'
+             .field.form-group
+                 = f.label :password_confirmation
+                 br
+                 = f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'
+             .actions.form-group
+                 = f.submit "Sign up", class: 'btn btn-success'
+            = render "devise/shared/links"
