--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,6 +18,12 @@ html
                         i.fa.fa-users
                             | Dev Match
                 .collapse.navbar-collapse#main-nav-collapse
+                    .nav.navbar-nav.navbar-right
+                        - if current_user
+                            = button_to "Sign Out", destroy_user_session_path, method: :delete, class: "btn btn-primary navbar-btn"
+                        -else
+                            = link_to "Log In", new_user_session_path, class: "btn btn-primary navbar-btn", method: :get
+                            = link_to "Sign Up", new_user_registration_path, class: "btn btn-success navbar-btn", method: :get
                     ul.nav.navbar-nav.navbar-right
                         li = link_to "About", about_path
                         li = link_to "Contact Us", new_contact_path
