--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -8,9 +8,9 @@
             h2.text-center Basic Membership
             h4 Sign up for free and get basic access to the community.
             br
-            = link_to "Sign up with Basic", new_user_registration_path, class: 'btn btn-primary btn-lg btn-block'
+            = link_to "Sign up with Basic", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block'
     .col-md-6
         .well
             h2.text-center Pro Membership
             h4 Sign up for the pro account for $10/month and get access to the community and contact information!
-            = link_to "Sign up with Pro", new_user_registration_path, class: 'btn btn-success btn-lg btn-block'
+            = link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block'
