--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,27 +1,18 @@
  .row
-     .col-md-4.col-md-offset-4
+     .col-md-6.col-md-offset-3.text-center
+         - if params[:plan] == '2'
+            h1 Pro Account
+            p Sign up for the pro account for $10/month and get access to the community and contact information!
+         - else
+             h1 Basic Account
+             p Sign up for free and get basic access to the community.
+     .col-md-6.col-md-offset-3
          .well
             h2
               | Sign up
-            = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-             = devise_error_messages!
-             .field.form-group
-                = f.label :email
-                br
-                = f.email_field :email, autofocus: true, class: 'form-control'
-             .field.form-group
-                = f.label :password
-                - if @validatable
-                  em
-                    | (
-                    = @minimum_password_length
-                    |  characters minimum)
-                br
-                = f.password_field :password, autocomplete: "off", class: 'form-control'
-             .field.form-group
-                 = f.label :password_confirmation
-                 br
-                 = f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'
-             .actions.form-group
-                 = f.submit "Sign up", class: 'btn btn-success'
+
+            - if params[:plan] == '2'
+                = render "pro_form"
+            - else
+                = render "basic_form"
             = render "devise/shared/links"
