--- a/app/views/devise/registrations/_pro_form.html.slim
+++ b/app/views/devise/registrations/_pro_form.html.slim
@@ -1,5 +1,6 @@
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
  = devise_error_messages!
+ = hidden_field_tag 'plan', params[:plan]
  .field.form-group
     = f.label :email
     br
@@ -28,4 +29,4 @@
      = select_month nil, {add_month_numbers: true}, {name: nil, id: "card_month"}
      = select_year nil, {start_year: Date.today.year, end_year: Date.today.year+15}, {name: nil, id: "card_year"}
  .actions.form-group
-     = f.submit "Sign up", class: 'btn btn-success'
+     = f.submit "Sign up", class: 'btn btn-success', id: 'form-submit-btn'
