--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,7 +3,9 @@ html
     head
         title Dev Match
         = stylesheet_link_tag    'application', media: 'all'
+        = javascript_include_tag "https://js.stripe.com/v2/", type: 'text/javascript'
         = javascript_include_tag 'application'
+        = tag :meta, name: "stripe-key", content: STRIPE_PUBLIC_KEY
         = csrf_meta_tags
     body
         nav.navbar.navbar-inverse.navbar-static-top role="navigation"
