--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,7 +8,7 @@ html
         = tag :meta, name: "stripe-key", content: STRIPE_PUBLIC_KEY
         = csrf_meta_tags
     body
-        nav.navbar.navbar-inverse.navbar-static-top role="navigation"
+        .nav.navbar.navbar-inverse.navbar-static-top role="navigation"
             .container
                 .navbar-header
                     button.navbar-toggle type="button" data-toggle="collapse" data-target="#main-nav-collapse"
