--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,16 +1,18 @@
+= link_to "Create your profile!", new_user_profile_path( current_user ) if current_user
+
 .jumbotron.text-center
-    h1 Welcome to Dev Match
-    h3 A membership site where entrepreneurs can meet developers.
+  h1 Welcome to Dev Match
+  h3 A membership site where entrepreneurs can meet developers.
 
 .row
-    .col-md-6
-        .well
-            h2.text-center Basic Membership
-            h4 Sign up for free and get basic access to the community.
-            br
-            = link_to "Sign up with Basic", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block'
-    .col-md-6
-        .well
-            h2.text-center Pro Membership
-            h4 Sign up for the pro account for $10/month and get access to the community and contact information!
-            = link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block'
+  .col-md-6
+    .well
+      h2.text-center Basic Membership
+      h4 Sign up for free and get basic access to the community.
+      br
+      = link_to "Sign up with Basic", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block'
+  .col-md-6
+    .well
+      h2.text-center Pro Membership
+      h4 Sign up for the pro account for $10/month and get access to the community and contact information!
+      = link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block'
