--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,1 +1,7 @@
 = @user
+br = "#{@user.profile.first_name} #{@user.profile.last_name}"
+= @user.profile.job_title
+- if current_user.plan_id == 2
+  br = @user.profile.phone_number
+  = @user.profile.contact_email
+br = @user.profile.description
