Added form partial, and edit action

--- a/app/views/profiles/edit.html.slim
+++ b/app/views/profiles/edit.html.slim
@@ -1,7 +1,6 @@
 .row
   .col-md-6.col-md-offset-3
-    h1.text-center Create Your Profile
+    h1.text-center Edit Your Profile
     p.text-center Be a part of the Dev Match community and fill out your profile!
     .well
       = render 'form'
-
