--- a/app/views/profiles/_form.html.slim
+++ b/app/views/profiles/_form.html.slim
@@ -1,10 +1,13 @@
-= form_for @profile, url: user_profile_path do |f|
+= form_for @profile, url: user_profile_path, :html => { :multipart => true } do |f|
   .form-group
     = f.label :first_name
     = f.text_field :first_name, class: 'form-control'
   .form-group
     = f.label :last_name
     = f.text_field :last_name, class: 'form-control'
+  .form-group
+    = f.label :avatar
+    = f.file_field :avatar, class: 'form-control'
   .form-group
     = f.label :job_title
     = f.select :job_title, ['Developer', 'Entrepreneur', 'Investor'], {},class: 'form-control'
