--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,7 +1,15 @@
-= image_tag @user.profile.avatar.url
-br = "#{@user.profile.first_name} #{@user.profile.last_name}"
-= @user.profile.job_title
-- if current_user.plan_id == 2
-  br = @user.profile.phone_number
-  = @user.profile.contact_email
-br = @user.profile.description
+.row
+  .col-md-3.text-center
+    = image_tag @user.profile.avatar.url
+  .col-md-6
+    h1 = "#{@user.profile.first_name} #{@user.profile.last_name}"
+    h3 <span class="job-title-icon">#{job_title_icon}</span> #{@user.profile.job_title}
+    .well.profile-description.profile-block
+      h3 Description
+      = @user.profile.description
+    - if true#current_user.plan_id == 2
+      .well.contact-info.profile-block
+        h3 Contact Info
+        = @user.profile.phone_number
+        br
+        = @user.profile.contact_email
