--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -17,7 +17,7 @@
       .well
         h2.text-center The Community
         p Visit the community to meet other developers, entrepreneurs, and investors!
-        = link_to "Visit the community", '#', class: 'btn btn-default btn-lg btn-block'
+        = link_to "Visit the community", users_path, class: 'btn btn-default btn-lg btn-block'
   -else
     .col-md-6
       .well
