--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,6 +1,6 @@
 .row
   .col-md-3.text-center
-    = image_tag @user.profile.avatar.url
+    = image_tag @user.profile.avatar.url, class: 'user-show-avatar'
   .col-md-6
     h1 = "#{@user.profile.first_name} #{@user.profile.last_name}"
     h3 <span class="job-title-icon">#{job_title_icon}</span> #{@user.profile.job_title}
