--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -7,7 +7,7 @@
     .well.profile-description.profile-block
       h3 Description
       = @user.profile.description
-    - if true#current_user.plan_id == 2
+    - if current_user.plan_id == 2
       .well.contact-info.profile-block
         h3 Contact Info
         = @user.profile.phone_number
