--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -21,11 +21,14 @@ html
                             | Dev Match
                 .collapse.navbar-collapse#main-nav-collapse
                     .nav.navbar-nav.navbar-right
-                        - if current_user
+                        - if user_signed_in?
                             = button_to "Sign Out", destroy_user_session_path, method: :delete, class: "btn btn-primary navbar-btn"
                         -else
                             = link_to "Log In", new_user_session_path, class: "btn btn-primary navbar-btn", method: :get
                     ul.nav.navbar-nav.navbar-right
+                        - if user_signed_in?
+                          li = link_to "Community", users_path
+                          li = link_to "My Account", edit_user_registration_path
                         li = link_to "About", about_path
                         li = link_to "Contact Us", new_contact_path
 
