--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -4,12 +4,14 @@
       - @users.each do |user|
         - if user.profile
           li
-            <div class="well row #{cycle('white-bg', '')}">
+            div class="well row #{cycle('white-bg', '')}"
               .col-sm-4.text-center
                 - if user.profile.avatar
                   = link_to user do
                     = image_tag user.profile.avatar.url(:thumb), class: 'user-index-avatar'
               = link_to user do
                 h2 #{user.profile.first_name} #{user.profile.last_name}
-              p = user.profile.job_title
-            </div>
+              p
+                = user.profile.job_title
+                - if user.plan_id == 2
+                  span.label.label-danger PRO
