Added helpful copy

--- a/app/views/contacts/new.html.slim
+++ b/app/views/contacts/new.html.slim
@@ -1,6 +1,8 @@
 .row
     .col-md-4
     .col-md-4
+        h1.text-center Contact Us
+        p.text-center Reach out if you have any questions or comments.
         .well
             = form_for @contact do |f|
                 .form-group
