--- a/app/views/pages/about.html.slim
+++ b/app/views/pages/about.html.slim
@@ -1,1 +1,2 @@
 h2 About Us
+p Welcome to Dev Match. We are a community of developers, entrepreneurs, and investors who are interested in meeting one another and sharing ideas.
