--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -1,5 +1,7 @@
 .row
   .col-md-8.col-md-offset-2
+    h1 Dev Match Community
+    p Welcome to the Dev Match community. Users must fill out a profile in order to be visible in the community.
     ul.list-unstyled
       - @users.each do |user|
         - if user.profile
